Create new code profile; setup firebase -- Chromebook

--- a/vanilla-js/index.html
+++ b/vanilla-js/index.html
@@ -23,7 +23,7 @@
   <meta name="msapplication-tap-highlight" content="no">
   <link rel="icon" href="images/favicon.ico">
 
-  <!-- Web Application Manifest -->
+  <!-- NOTE Web Application Manifest -->
   <link rel="manifest" href="manifest.json">
 
   <!-- Add to homescreen for Chrome on Android -->
